Bug 529263. Allow content IFRAMEs in chrome IFRAMEs to not be hooked into the view manager hierarchy. r=bz

--HG--
extra : rebase_source : a7e053e408bb176fc9df068f52157e886b0554b1